# newsletter

./: Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
config/: base.yaml  local.yaml  production.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  shutdown.rs  startup.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs  subscriptions.rs
tests/api/: helpers.rs
