[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "newsletter"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mime = "0.3.17"
