[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "newsletter"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
axum = {version = "0.6.18", features = ["tracing"]}
chrono = { version = "0.4.24", features = ["clock"] }
config = "0.13.3"
hyper = { version = "0.14.26", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.3", features = ["v4"] }
tower-http = { version = "0.4", features = ["request-id", "trace", "util"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry"] }

[dependencies.sqlx]
version = "0.6.3"
deafult-features = false
features = [
  "postgres",
  "macros",
  "runtime-tokio-rustls",
  "uuid",
  "chrono",
  "migrate",
  "offline"
]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
mime = "0.3.17"
